# Unitrain_in_cpp

./: CMakeLists.txt  README.md  build.sh  install_libraries.sh  test  test.cpp
include/: basic_model.h  constants.h  dataloader.h  training.h
src/: CMakeLists.txt  basic_model.cpp
utils/: size_change.py
